<resources>
    <string name="app_name">TLUNet</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu</string>


    /// navigation
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="wishlist">Yêu thích</string>
    <string name="profile">Cá nhân</string>

    // home
    <string name="category">Chuyên mục</string>
    <string name="more">Xem thêm</string>
    <string name="faculty">Khoa</string>

    // category
    <string name="economic">Kinh tế</string>
    <string name="technology">Công nghệ thông tin</string>
    <string name="accounting">Kế toán</string>
    <string name="mechanical">Kỹ thuật cơ khí</string>

    // login
    <string name="create_account">Tạo tài khoản</string>
    <string name="errLogin">Tài khoản hoặc mật khẩu chưa chính xác</string>


    // register
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="email_pass_null">Bạn chưa nhập số email hoặc mật khẩu </string>
    <string name="invalidEmail">Email không hợp lệ</string>
    <string name="invalidPassword">Mật khẩu không hợp lệ</string>
    <string name="err_passwword_not_too">Xác nhận mật khẩu không khớp</string>
    <string name="err_valid_password">*Mật khẩu có độ dài trên 8 ký tự, bao gồm ít nhất: 1 ký tự viết hoa, 1 ký tự viết trường, 1 ký tự số và 1 ký tự đặc biệt</string>
    <string name="create_account_successful">Tạo tài khoản thành công</string>

    // forgotPassword
    <string name="send">Gửi đi</string>

    // subject
    <string name="subjectName">Tên môn học:</string>
    <string name="subjectCode">Mã môn học:</string>
    <string name="credits">Số tín chỉ: </string>
    <string name="credit"> Tín chỉ</string>
    <string name="studyDocument">Tài liệu học tập</string>
    <string name="lesson">A. Bài giảng</string>
    <string name="referenceDocuments">B. Tài liệu tham khảo</string>
    <string name="documents">Project tham khảo</string>
    <string name="comment">Bình luận</string>
    <string name="share">Chia sẻ tài liệu</string>
    <string name="upload">Tải lên</string>


    <string name="list_null">Hiện không có dữ liệu để hiển thị</string>

    // comments
    <string name="commentSuccess">Thêm bình luận thành công</string>
    <string name="commentFail">Thêm bình luận thất bại</string>
    <string name="enterComment">Soạn bình luận</string>

    //share
    <string name="subject">Môn học</string>
    <string name="url">URL</string>
    <string name="none">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>