<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/itemHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
<!--    <item-->
<!--        android:id="@+id/itemWishlist"-->
<!--        android:icon="@drawable/ic_baseline_favorite_border_24"-->
<!--        android:title="@string/wishlist" />-->
    <item
        android:id="@+id/itemProfile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>