<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.CategoryActivity">
    <com.example.tlunet.view.CustomAppBar
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/bgColor"
        app:backIcon="@drawable/ic_baseline_arrow_back_ios_24"
        app:radiusBottomLeft="@dimen/_15sdp"
        app:radiusBottomRight="@dimen/_15sdp"
        app:titleBold="true"
        app:titleTextSize="@dimen/_16sdp" />
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.example.tlunet.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_textview_click"
            app:dividerTop="false"
            app:title="@string/economic"
            app:icon="@drawable/ic_baseline_menu_book_24"
            />
        <com.example.tlunet.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_textview_click"
            app:dividerTop="false"
            app:title="@string/technology"
            app:icon="@drawable/ic_baseline_menu_book_24"
            />
        <com.example.tlunet.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_textview_click"
            app:dividerTop="false"
            app:title="@string/accounting"
            app:icon="@drawable/ic_baseline_menu_book_24"
            />
        <com.example.tlunet.view.MenuItemView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/custom_textview_click"
            app:dividerTop="false"
            app:title="@string/mechanical"
            app:icon="@drawable/ic_baseline_menu_book_24"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>