<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".ui.createaccount.CreateAccountActivity">

    <com.example.tlunet.view.NavigationBar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_tab"
        android:background="@drawable/gradient_theme"
        app:backIcon="@drawable/ic_baseline_arrow_back_24"
        app:backIconColor="#fff"
        app:backIconHeight="45dp"
        app:backIconVisible="true"
        app:backIconWidth="45dp"
        app:contentInsetStart="0dp"
        app:radiusBottomLeft="@dimen/dp_15"
        app:radiusBottomRight="@dimen/dp_15"
        app:title="@string/create_account"
        app:titleBold="true"
        app:titleTextSize="@dimen/size_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/sf_pro_medium"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_pro_medium"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="50dp"
                android:paddingBottom="20dp"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgVisiblePassword"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_visibility_24" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_outline_lock_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_pro_medium"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingEnd="50dp"
                android:paddingBottom="20dp"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgVisibleConfirmPassword"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_visibility_24" />
        </FrameLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llCaptcha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center_horizontal"

            android:background="@color/clr_soft_gray">



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@color/color_app"
            android:textSize="@dimen/sp_text_title"
            android:text="@string/err_valid_password"/>
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_button"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_effect_button_click"
            android:fontFamily="@font/svn_gilroy_bold"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/size_text_button" />

    </LinearLayout>

</LinearLayout>