<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.subject.SubjectDetailActivity">
    <com.example.tlunet.view.NavigationBar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="@dimen/size_tab"
        android:background="@drawable/gradient_theme"
        app:backIcon="@drawable/ic_baseline_arrow_back_24"
        app:backIconColor="#fff"
        app:backIconHeight="45dp"
        app:backIconVisible="true"
        app:backIconWidth="45dp"
        app:contentInsetStart="0dp"
        app:radiusBottomLeft="@dimen/dp_15"
        app:radiusBottomRight="@dimen/dp_15"
        app:title="@string/category"
        app:titleBold="true"
        app:titleTextSize="@dimen/size_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_tab"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="47dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp">

                <TextView
                    style="@style/textBoldDarkH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subjectName" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/textBoldDarkH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subjectName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp">

                <TextView
                    style="@style/textBoldDarkH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subjectCode" />

                <TextView
                    android:id="@+id/tvCode"
                    style="@style/textBoldDarkH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subjectName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp">

                <TextView
                    style="@style/textBoldDarkH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits" />

                <TextView
                    android:id="@+id/tvCredit"
                    style="@style/textBoldDarkH3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subjectName" />
            </LinearLayout>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_margin="@dimen/_5sdp" />
            </RelativeLayout>

            <TextView
                style="@style/textBoldDarkH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/studyDocument" />

            <TextView
                style="@style/textH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/lesson"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvLesson"
                style="@style/textH2"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_33sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="ádassadsa"
                android:textColor="@color/lick_color"/>

            <TextView
                style="@style/textH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/referenceDocuments"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReferenceDocuments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp" />

            <TextView
                style="@style/textBoldDarkH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/documents" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDocuments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp" />

            <TextView
                style="@style/textBoldDarkH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/comment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnShare"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            style="@style/textH2"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/share"
            android:textColor="@color/color_white"
            android:background="@drawable/custom_button_click" />
        <TextView
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnComment"
            android:layout_weight="0.8"
            android:layout_width="0dp"
            style="@style/textH2"
            android:textAllCaps="false"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/comment"
            android:textColor="@color/color_white"
            android:background="@drawable/custom_button_click" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>