<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ui.postDocument.DocumentActivity">
    <com.example.tlunet.view.NavigationBar
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="@dimen/size_tab"
        android:background="@drawable/gradient_theme"
        app:backIcon="@drawable/ic_baseline_arrow_back_24"
        app:backIconColor="#fff"
        app:backIconHeight="45dp"
        app:backIconVisible="true"
        app:backIconWidth="45dp"
        app:contentInsetStart="0dp"
        app:radiusBottomLeft="@dimen/dp_15"
        app:radiusBottomRight="@dimen/dp_15"
        app:title="@string/share"
        app:titleBold="true"
        app:titleTextSize="@dimen/size_title" />

    <TextView
        android:id="@+id/tvSubjects"
        app:layout_constraintTop_toBottomOf="@+id/navBar"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/textBoldDarkH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/subjectName" />

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing"
        app:layout_constraintTop_toBottomOf="@+id/tvSubjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor"
        android:layout_margin="@dimen/_10sdp"
        app:layout_scrollFlags="scroll">

        <com.example.tlunet.view.MenuItemView
            android:id="@+id/itemStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shadow"
            app:dividerTop="false"
            app:iconEnd="down"
            app:icon="@drawable/ic_baseline_menu_open_24"
            app:title="" />
    </com.google.android.material.appbar.CollapsingToolbarLayout>
    <Button
        app:layout_constraintTop_toBottomOf="@+id/edtUrl"
        android:id="@+id/btn_uploadFile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/upload"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:background="@drawable/custom_button_click" />
    <TextView
        android:id="@+id/tvUrl"
        app:layout_constraintTop_toBottomOf="@+id/collapsing"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/textBoldDarkH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/url" />
    <EditText
        android:id="@+id/edtUrl"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="left"
        android:maxLines="1"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        app:layout_constraintTop_toBottomOf="@+id/edtUrl"
        android:id="@+id/btn_upload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:text="@string/upload"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="15sp"
        android:background="@drawable/custom_button_click" />
</androidx.constraintlayout.widget.ConstraintLayout>