<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".ui.forgotPassword.ForgotPasswordActivity">
    <com.example.tlunet.view.NavigationBar
        android:id="@+id/navBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_tab"
        android:background="@drawable/gradient_theme"
        app:backIcon="@drawable/ic_baseline_arrow_back_24"
        app:backIconColor="#fff"
        app:backIconHeight="45dp"
        app:backIconVisible="true"
        app:backIconWidth="45dp"
        app:contentInsetStart="0dp"
        app:radiusBottomLeft="@dimen/dp_15"
        app:radiusBottomRight="@dimen/dp_15"
        app:title="@string/forgot_password"
        app:titleBold="true"
        app:titleTextSize="@dimen/size_title" />
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/logo"/>


    <LinearLayout
        android:id="@+id/llForm"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/forgot_password"
            style="@style/style1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/sf_pro_medium"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_button"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/custom_effect_button_click"
            android:fontFamily="@font/svn_gilroy_bold"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/size_text_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>